# simpler

./: .gitignore  compare_so_bytes.py  profile_aicpu_build_graph.sh  profile_so_loading.sh  pyproject.toml  quick_test_orch.py  test_memfd_aicpu  test_memfd_aicpu.cpp  test_memfd_with_real_so  test_memfd_with_real_so.cpp  test_orch_symbols.py  test_with_logging.sh
basics/03-aicpu-kernel/: CMakeLists.txt  README.md  launcher.cpp
basics/03-aicpu-kernel/kernel/: CMakeLists.txt  hello_world.cpp
basics/memfd-test/: CMakeLists.txt  README.md  dlsym_test.cpp  golden.py  kernel_config.py  launcher.cpp  simple_test.cpp  symbol_lookup_test.cpp
basics/memfd-test/kernel/: CMakeLists.txt  memfd_test_kernel.cpp
docs/: comm-domain.md  hierarchical_level_runtime.md  memfd_create_optimization.md  multi-comm-domain-implementation.md  orchestrator.md  pr-752-handoff-summary.md  profiling-framework.md  python-callable-serialization.md  python-packaging.md  scheduler.md  task-flow.md  worker-manager.md
docs/dfx/: l2-swimlane-profiling.md  pmu-profiling.md  tensor-dump.md
examples/a2a3/tensormap_and_ringbuffer/async_notify_demo/: test_async_notify_demo.py
examples/a2a3/tensormap_and_ringbuffer/deferred_notify_demo/: test_deferred_notify_demo.py
examples/a2a3/tensormap_and_ringbuffer/memfd_test/: golden.py
examples/a2a3/tensormap_and_ringbuffer/memfd_test/kernels/: kernel_config.py
examples/a2a3/tensormap_and_ringbuffer/sdma_async_completion_demo/: test_sdma_async_completion_demo.py
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/: CMakeLists.txt  CMakeLists_tilefwk.txt  CMakeLists_tilefwk_lib.txt  SUMMARY.md  compile_commands.sh  compile_full.sh  compile_full_v2.sh  device_sche.cpp  device_sche_minimal.cpp  hello_world.cpp
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/machine/device/tilefwk/: aicpu_common.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/machine/utils/: device_log.h  machine_ws_intf.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/: load_aicpu_op.cpp  load_aicpu_op.h  pypto_aicpu_interface.cpp  pypto_aicpu_interface.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/adapter/: runtime_api.h  runtime_define.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/machine/device/dynamic/: aicpu_instrumentation.h  device_trace.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/machine/device/tilefwk/: aicpu_common.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/machine/utils/: device_log.h  device_switch.h  machine_ws_intf.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/tilefwk/: aicpu_common.h  aicpu_perf.h  aikernel_data.h  aikernel_define.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/tilefwk_orig/: error_code.h
examples/a2a3/tensormap_and_ringbuffer/test_pypto_load/src/utils/: device_log.h
examples/a5/tensormap_and_ringbuffer/async_notify_demo/: test_async_notify_demo.py
examples/a5/tensormap_and_ringbuffer/deferred_notify_demo/: test_deferred_notify_demo.py
examples/workers/l3/: README.md
examples/workers/l3/allreduce_distributed/: main.py
examples/workers/l3/domain_rank_map/: main.py
examples/workers/l3/dual_domain_overlap/: main.py
examples/workers/l3/ep_dispatch_combine/: main.py
examples/workers/l3/ffn_tp_parallel/: main.py
python/bindings/: CMakeLists.txt  task_interface.cpp  worker_bind.h
python/simpler/: orchestrator.py  task_interface.py  worker.py
simpler_setup/: build_runtimes.py  runtime_builder.py  runtime_compiler.py
src/a2a3/docs/: platform.md
src/a2a3/platform/onboard/aicpu/: CMakeLists.txt  kernel.cpp
src/a2a3/platform/onboard/host/: CMakeLists.txt  aicpu_op_config.cpp  aicpu_op_config.h  comm_hccl.cpp  device_runner.cpp  device_runner.h  load_aicpu_op.cpp  load_aicpu_op.h  pto_runtime_c_api.cpp  runtime_api_wrapper.cpp  runtime_api_wrapper.h
src/a2a3/platform/sim/aicpu/: CMakeLists.txt
src/a2a3/platform/sim/host/: CMakeLists.txt  device_runner.cpp  device_runner.h  pto_runtime_c_api.cpp
src/a2a3/runtime/aicpu_build_graph/aicpu/: aicpu_executor.cpp  memfd_loader.h
src/a2a3/runtime/host_build_graph/runtime/: runtime.h
src/a2a3/runtime/tensormap_and_ringbuffer/aicpu/: aicpu_executor.cpp  memfd_loader.h
src/a2a3/runtime/tensormap_and_ringbuffer/host/: dep_gen_replay.cpp  runtime_maker.cpp
src/a2a3/runtime/tensormap_and_ringbuffer/runtime/: pto_orchestrator.cpp  pto_orchestrator.h  pto_runtime2.cpp  pto_runtime2.h  pto_runtime2_types.h  pto_shared_memory.h  pto_tensormap.h  runtime.h
src/a5/docs/: platform.md
src/a5/platform/include/aicore/: aicore_profiling_state.h  l2_perf_collector_aicore.h  pmu_collector_aicore.h
src/a5/platform/include/aicpu/: l2_perf_collector_aicpu.h  pmu_collector_aicpu.h
src/a5/platform/include/common/: kernel_args.h  l2_perf_profiling.h  platform_config.h  pmu_profiling.h
src/a5/platform/include/host/: l2_perf_collector.h  pmu_collector.h  tensor_dump_collector.h
src/a5/platform/onboard/aicore/: kernel.cpp
src/a5/platform/onboard/aicpu/: CMakeLists.txt  kernel.cpp
src/a5/platform/onboard/host/: CMakeLists.txt  (+3 more)
src/a5/runtime/: README.md
src/common/aicpu_dispatcher/: CMakeLists.txt  README.md  aicpu_dispatcher.cpp  aicpu_dispatcher.h
src/common/device_comm/: device_arena.h
src/common/hierarchical/: types.h  worker.h  worker_manager.cpp  worker_manager.h
src/common/host/: CMakeLists.txt  load_aicpu_op.cpp  load_aicpu_op.h
src/common/platform_comm/: comm.h  comm_sim.cpp
src/common/task_interface/: task_args.h
src/common/worker/: chip_worker.cpp  chip_worker.h
tests/st/aicore_op_timeout/: test_aicore_op_timeout.py
tests/ut/cpp/: CMakeLists.txt
tests/ut/cpp/a2a3/: test_ready_queue.cpp  test_scheduler_state.cpp  test_spsc_queue.cpp  test_task_state.cpp  test_tensormap.cpp
tests/ut/cpp/a5/: test_shared_memory.cpp  test_wiring.cpp
tests/ut/cpp/common/: test_device_arena.cpp
tests/ut/cpp/hierarchical/: test_scheduler.cpp
tests/ut/py/test_worker/: test_dynamic_alloc_hw.py  test_dynamic_alloc_sim.py  test_worker_distributed_sim.py
(+37 files in other folders)
